<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
 	android:id="@+id/container"  	
 	android:layout_alignParentBottom="true"
  	android:background="#DCDCDC"
    >
    
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
       >
	    <EditText
	        android:id="@+id/etSearchDocName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textCapSentences"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="5dp"
	        android:layout_weight="0.01"
	        android:hint="@string/text_search_doctors_name"
	        android:drawableLeft="@drawable/images1"
	        android:background="@drawable/edit_text_shape"
	        android:imeOptions="actionSearch"
	        >
	        <requestFocus />
	    </EditText>

	      <TextView
	          android:id="@+id/tvText"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:layout_marginBottom="5dp"
	          android:layout_marginTop="5dp"
	          android:layout_weight="1"
	          android:gravity="center"
	          android:text="@string/text_view"
	          android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <Button
	        android:id="@+id/btUpdateProductList"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	     	android:onClick="onSearchClick"
	        android:background="#6B8E23"
	 		android:layout_gravity="bottom"
	 		android:layout_weight="0.0001"
	        android:text="@string/text_search_button" />

	    </LinearLayout>
</LinearLayout>
